Thu Apr  7 21:43:42 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/descriptors/SuccessfulDeployment.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/run_test.pl:

          Successfull deployment baseline for the Launch-Failures test.

Thu Apr  7 21:04:51 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Base/CIAO_Base.mpc:
        * ciao/Base/CIAO_Exceptions.idl:
        * ciao/Containers/Container_Base_T.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Deployment/Handlers/Component_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:

          Vastly improved error reporting for component loading problems.
          Plain CCM exceptions are no longer reported to DAnCE, and
          additional meta-data is now included that will report the exact
          source of library loading problems.

Thu Apr  7 21:03:27 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Logger/Logger_Service.h:
        * ciao/Logger/Logger_Service.cpp:
        * connectors/dds4ccm/impl/logger/Logger_Service.h:
        * connectors/dds4ccm/impl/logger/Logger_Service.cpp:

          Add backend support from DAnCE.

Thu Apr  7 18:48:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Receiver/ObO_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Sender/ObO_Sender.cpp:
          Fixed valgrind memory leaks

Thu Apr  7 18:01:47 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/DDS_Receiver.mpc: